feat(#6): added `isPublic` field to `Archive`